# repository-linter-conig-checker

./: README.md  dependabot_alerts.csv  linter_check_report.csv  linter_check_results.csv  mypy.ini  pyproject.toml  repos.yaml
notebook/: dependabot_alerts.ipynb
src/: main.py  scan_dependabot_alerts.py  scan_linter_conf.py
src/domain/: constants.py  model.py
src/infrastructure/: client.py  env.py
src/usecase/: check_linters.py  check_mypy.py  check_ruff.py
tests/: test_check_linters.py  test_check_mypy.py  test_check_ruff.py
