[tool.poetry]
name = "github-inspector"
version = "0.1.0"
description = ""
authors = ["takeshi iijima"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pandas = "^2.2.3"
toml = "^0.10.2"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pyyaml = "^6.0.2"
structlog = "^25.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
mypy = "^1.15.0"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
